tests/fixtures/pass/infer_constraint_order.sali
let accept_same(T: type)(left: T, right: T): i32 = 21
let accept(T: type)(value: T): i32 = 21

let main(): i32 = {
  let wide: i64 = 7
  let ordered = accept_same(0, wide)
  let arithmetic = accept(0 + wide)
  ordered + arithmetic
}
