tests/fixtures/fail/infer_conflicting_arguments.sali
let same(T: type)(left: T, right: T): T = left

let main(): i32 = {
  same(_)(1, true)
  42
}
